--- a/css/ejercicio-4.css
+++ b/css/ejercicio-4.css
@@ -177,11 +177,13 @@ font-style: normal;
 	background-color: rgb(248, 248, 248);
 	padding: 10px 10px ;
 	border-radius: 15px;
+  color: #000;
 }
 .btn2:hover{
 	background-color: red;
 	color: #ffffff;
 }
+
 @media screen and (min-width: 992px) {
   .card-container {
     width: min(80%, 1200px);
@@ -228,6 +230,7 @@ font-style: normal;
     align-items: center;
     margin-top: 8vw;
   }
+  
 
   .card-botones {
     flex-direction: row;
